updated css for <p>, removed whitespace on about page, renamed "posts" to "posts chronologically"

--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ publishDir = "docs"
   url = "about/"
 
 [[params.menu]]
-  name = "posts"
+  name = "posts chronologically"
   url = "categories/"
 
 [[params.menu]]
