--- a/config.toml
+++ b/config.toml
@@ -3,52 +3,35 @@ title = "welcome!"
 theme ="hugo-theme-basic-customized"
 languageCode = "en-us"
 enableEmoji = true 
-# copyright = "© 2019 - Max Vogel"
-# Instead I'm going to write some js in footers.html to auto-update the year
 description = "Max Vogel's personal website."
+# copyright = "© 2019 - Max Vogel"  # js in footer does this
 
-publishDir = "docs"
+publishDir = "docs"  # for github pages
 
 [taxonomies]
-  category = "categories"
-  series = "series"
-  tag = "tags"
+    category = "categories"
+    series = "series"
+    tag = "tags"
 
 [params]
-  titleEmoji = ""
+    titleEmoji = ""
 
 [Permalinks]
-  post = "posts/:slug"
-  tags = "tags/:slug"
+    post = "posts/:slug"
+    tags = "tags/:slug"
 
 [[params.menu]]
-  name = "about"
-  url = "about/"
+    name = "about"
+    url = "about/"
 
 [[params.menu]]
-  name = "posts"
-  url = "categories/"
-
+    name = "posts"
+    url = "categories/"
 
 [sitemap]
-  changefreq = "monthly"
-  filename = "sitemap.xml"
-  priority = 0.5
-
-[privacy]
-  [privacy.disqus]
-    disable = true
-  [privacy.googleAnalytics]
-    disable = true
-  [privacy.instagram]
-    disable = true
-  [privacy.twitter]
-    disable = true
-  [privacy.vimeo]
-    disable = true
-  [privacy.youtube]
-    disable = true
-
+    changefreq = "monthly"
+    filename = "sitemap.xml"
+    priority = 0.5
 
 [services.rss]
   limit = 15
