--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # https://github.com/github/linguist/blob/master/docs/overrides.md
 *.css linguist-generated=true
-tempatle.html -linguist-detectable=false
+_tempatle.html linguist-detectable=false
